recursion.cons.lessons.recursion.cons.Length.scala.error
length:8: error: ')' expected but '[' found.
    if (list == []) {
                ^length:13: error: illegal start of simple expression
}
^